--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,12 +31,12 @@ syntax_job:
   script:
     - knife node show `hostname`
     - docker pull docker.thezengarden.net/chef-ci
-    - docker run $DOCKER_VOLUMES -i "${DOCKER_IMG}" /bin/bash -l -c "cd ${CI_PROJECT_DIR} && git log -1"
-    - docker run $DOCKER_VOLUMES -i "${DOCKER_IMG}" /bin/bash -l -c "ruby -v"
-    - docker run $DOCKER_VOLUMES -i "${DOCKER_IMG}" /bin/bash -l -c "foodcritic -V"
-    - docker run $DOCKER_VOLUMES -i "${DOCKER_IMG}" /bin/bash -l -c "rubocop -V"
-    - docker run $DOCKER_VOLUMES -i "${DOCKER_IMG}" /bin/bash -l -c "rubocop -l ${CI_PROJECT_DIR}"
-    - docker run $DOCKER_VOLUMES -i "${DOCKER_IMG}" /bin/bash -l -c "foodcritic -P -f any ${CI_PROJECT_DIR}"
+    - docker run --rm $DOCKER_VOLUMES -i "${DOCKER_IMG}" /bin/bash -l -c "cd ${CI_PROJECT_DIR} && git log -1"
+    - docker run --rm $DOCKER_VOLUMES -i "${DOCKER_IMG}" /bin/bash -l -c "ruby -v"
+    - docker run --rm $DOCKER_VOLUMES -i "${DOCKER_IMG}" /bin/bash -l -c "foodcritic -V"
+    - docker run --rm $DOCKER_VOLUMES -i "${DOCKER_IMG}" /bin/bash -l -c "rubocop -V"
+    - docker run --rm $DOCKER_VOLUMES -i "${DOCKER_IMG}" /bin/bash -l -c "rubocop -l ${CI_PROJECT_DIR}"
+    - docker run --rm $DOCKER_VOLUMES -i "${DOCKER_IMG}" /bin/bash -l -c "foodcritic -P -f any ${CI_PROJECT_DIR}"
     - knife cookbook upload $COOKBOOK_NAME
 
 
