--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,6 @@ variables:
   DOCKER_VOLUMES:   "-v /opt/docker_private/.ssh:/root/.ssh -v /opt/docker_private/.chef:/root/.chef -v ${CI_PROJECT_DIR}:${CI_PROJECT_DIR}"
   COOKBOOK_NAME:    "zen_apache"
   DOCKER_IMG:       "docker.thezengarden.net/zen-ci"
-  RUBY_PATH:        "/usr/local/rvm/gems/ruby-2.6.0/bin"
 
 
 stages:
@@ -33,10 +32,10 @@ syntax_job:
     - development
   script:
     - "cd ${CI_PROJECT_DIR} && git log -1"
-    - "${RUBY_PATH}/ruby -v"
-    - "${RUBY_PATH}/foodcritic -V"
-    - "${RUBY_PATH}/rubocop -V"
-    - "${RUBY_PATH}/rubocop -l ${CI_PROJECT_DIR}"
-    - "${RUBY_PATH}/foodcritic -P -f any ${CI_PROJECT_DIR}"
+    - /bin/bash -l -c "source /etc/profile.d/rvm.sh; ruby -v"
+    - /bin/bash -l -c "source /etc/profile.d/rvm.sh; foodcritic -V"
+    - /bin/bash -l -c "source /etc/profile.d/rvm.sh; rubocop -V"
+    - /bin/bash -l -c "source /etc/profile.d/rvm.sh; rubocop -l ${CI_PROJECT_DIR}"
+    - /bin/bash -l -c "source /etc/profile.d/rvm.sh; foodcritic -P -f any ${CI_PROJECT_DIR}"
   # we will need to get docker ci working in a manner which once again allows this:
   # - knife cookbook upload $COOKBOOK_NAME
